refactor: :ambulance: Removed Pages
