# server/src/dao/documentDAO.ts
@@ -64,7 +64,6 @@ class DocumentDAO {
    * @param scale - The scale of the document. It must not be null.
    * @param type - The type of the document. It must not be null.
    * @param language - The language of the document. It must not be null.
-   * @param pages - The number of pages of the document. It can be null.
    * @param link - The link to the document. It can be null.
    * @param issuance_year - The year of issuance of the document. It must not be null.
    * @param issuance_month - The month of issuance of the document. It could be null.
@@ -78,7 +77,6 @@ class DocumentDAO {
     scale: string,
     type: string,
     language: string | null,
-    pages: string | null,
     issuance_year: string,
     issuance_month: string | null,
     issuance_day: string | null,
@@ -110,8 +108,8 @@ class DocumentDAO {
       }
       // Insert document
       const documentInsertQuery = `
-        INSERT INTO documents (title, "desc", scale, type, language, pages, issuance_year, issuance_month, issuance_day, id_area)
-        VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10)
+        INSERT INTO documents (title, "desc", scale, type, language, issuance_year, issuance_month, issuance_day, id_area)
+        VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9)
         RETURNING id_file
       `;
 
@@ -121,7 +119,6 @@ class DocumentDAO {
         scale,
         type,
         language,
-        pages,
         issuance_year,
         issuance_month,
         issuance_day,
@@ -154,7 +151,7 @@ class DocumentDAO {
         const sql = `
               SELECT 
                 d.id_file, d.title, d.desc, d.scale, 
-                d.type, l.language_name, d.pages, d.issuance_year, d.issuance_month, d.issuance_day, d.id_area,
+                d.type, l.language_name, d.issuance_year, d.issuance_month, d.issuance_day, d.id_area,
                 s.stakeholder
               FROM documents d
               LEFT JOIN stakeholders_docs s ON s.doc = d.id_file
@@ -178,7 +175,6 @@ class DocumentDAO {
             firstRow.scale,
             firstRow.type,
             firstRow.language_name,
-            firstRow.pages,
             firstRow.issuance_year,
             firstRow.issuance_month,
             firstRow.issuance_day,
@@ -221,7 +217,7 @@ class DocumentDAO {
         const sql = `
           SELECT 
             d.id_file, d.title, d.desc, d.scale, 
-            d.type, d.language, d.pages, d.issuance_year, d.issuance_month, d.issuance_day, d.id_area,
+            d.type, d.language, d.issuance_year, d.issuance_month, d.issuance_day, d.id_area,
             s.stakeholder
           FROM documents d
           LEFT JOIN stakeholders_docs s ON s.doc = d.id_file;
@@ -243,7 +239,6 @@ class DocumentDAO {
                 row.scale,
                 row.type,
                 row.language,
-                row.pages,
                 row.issuance_year,
                 row.issuance_month,
                 row.issuance_day,
@@ -279,7 +274,6 @@ class DocumentDAO {
    * @param scale - The new scale of the document. It must not be null.
    * @param type - The new type of the document. It must not be null.
    * @param language - The new language of the document. It must not be null.
-   * @param pages - The new number of pages of the document. It can be null.
    * @param issuance_year - The new year of issuance of the document. It must not be null.
    * @param issuance_month - The new month of issuance of the document. It could be null.
    * @param issuance_day - The new day of issuance of the document. It could be null.
@@ -295,7 +289,6 @@ class DocumentDAO {
     scale: string,
     type: string,
     language: string | null,
-    pages: string | null,
     issuance_year: string,
     issuance_month: string | null,
     issuance_day: string | null,
@@ -315,8 +308,8 @@ class DocumentDAO {
 
         const updateSql = `
           UPDATE documents
-          SET title = $1, "desc" = $2, scale = $3, type = $4, language = $5, pages = $6, issuance_year = $7, issuance_month = $8, issuance_day = $9, id_area = $10
-          WHERE id_file = $11
+          SET title = $1, "desc" = $2, scale = $3, type = $4, language = $5, issuance_year = $6, issuance_month = $7, issuance_day = $8, id_area = $9
+          WHERE id_file = $10
         `;
         const updateResult = await db.query(updateSql, [
           title,
@@ -324,7 +317,6 @@ class DocumentDAO {
           scale,
           type,
           language,
-          pages,
           issuance_year,
           issuance_month,
           issuance_day,
@@ -752,7 +744,6 @@ class DocumentDAO {
           d.issuance_year,
           d.issuance_month,
           d.issuance_day,
-          d.pages,
           d.id_area,
           ST_AsGeoJSON(a.area) AS area_geojson, -- Get area in GeoJSON format
           s.scale AS scale_name,
@@ -847,7 +838,6 @@ class DocumentDAO {
             month: row.issuance_month,
             day: row.issuance_day,
           },
-          pages: row.pages,
           area: formattedCoordinates,
           stakeholders: row.stakeholders.filter((s: string) => s), // Filter out any null values
           links: row.links.filter((link: any) => link.docId), // Filter out any invalid links
